--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
 
     <header>
         <div class="container header-content">
-            <h1>G H Raisoni College of Engineering, Nagpur</h1>
-            <p>Department of Dental Research & Development</p>
+            <h1>DEVELOPMENT OF A PROTOCOL FOR FABRICATION OF CUSTOM IMPLANTS FOR REPLACEMENT OF SINGLE NON-RESTORABLE TOOTH</h1>
+            <p>Surgical Guide Protocol Library</p>
         </div>
     </header>
 
