--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <header>
         <div class="container header-content">
             <h1>DEVELOPMENT OF A PROTOCOL FOR FABRICATION OF CUSTOM IMPLANTS FOR REPLACEMENT OF SINGLE NON-RESTORABLE TOOTH</h1>
-            <p>Surgical Guide Protocol Library</p>
+            <p>Mechanical Engineering Department, G H Raisoni College of Engineering, Nagpur</p>
         </div>
     </header>
 
@@ -322,7 +322,7 @@
             </div>
             <div>
                 <h4>Research Guide</h4>
-                <p><strong>Dr. Santosh Jaju</strong><br>Deputy Director & Dean (R&D)</p>
+                <p><strong>Dr. Santosh Jaju</strong><br>Deputy Director & Dean (R&D)<br>G H Raisoni College of Engineering</p>
             </div>
             <div>
                 <h4>Address</h4>
@@ -330,7 +330,7 @@
             </div>
         </div>
         <div style="text-align: center; margin-top: 30px; border-top: 1px solid #444; padding-top: 20px;">
-            &copy; 2026 GHRCE Dental Research. All Rights Reserved.
+            &copy; 2026 GHRCE Biomedical Engineering Research. All Rights Reserved.
         </div>
     </footer>
 
