--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         /* Hero Image Section */
         .hero {
-            background: linear-gradient(rgba(0,51,102,0.8), rgba(0,51,102,0.8)), url('https://images.unsplash.com/photo-1628177142898-93e36e4e3a50?auto=format&fit=crop&q=80');
+            background: linear-gradient(rgba(0,51,102,0.8), rgba(0,51,102,0.8)), url('my-back-banner');
             background-size: cover;
             background-position: center;
             color: var(--white);
