--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         /* Hero Image Section */
         .hero {
-            background: linear-gradient(rgba(0,51,102,0.8), rgba(0,51,102,0.8)), url('my-back-banner');
+            background: linear-gradient(rgba(0,51,102,0.8), rgba(0,51,102,0.8)), url('my-back-banner.png');
             background-size: cover;
             background-position: center;
             color: var(--white);
